# Aleksandr_strulkov_course-work4

./: .gitignore  README.md  main.py  pyproject.toml
data/: vacancies_all.json  vacancies_favorite.json
src/: class_api.py  class_mylist.py  class_saver.py  class_userinput.py  class_vacancy.py
